[package]
name = "text_on_server_death"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.4"
daemonize = "0.5.0"
dirs = "5.0.0"
log = "0.4.17"
serde = "1.0.160"
simple_logger = "4.1.0"
telegram-bot = "0.8.0"
toml = "0.7.3"
